# EruEngine

./: CMakeLists.txt  README.md
src/: main.cpp
src/Renderer/: fshader.fs  shader.h  texture.h  vshader.vs
